<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dashboard.DashboardFragment"
    >

  <data>
    <variable
        name="viewModel"
        type="com.rofhiwa.weatherapp.ui.dashboard.DashboardViewModel"
        />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/appbar_layout_activity"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/colorCreamWhite"
      >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <com.google.android.material.appbar.CollapsingToolbarLayout
          android:id="@+id/collapsing_toolbar"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_scrollFlags="scroll|exitUntilCollapsed"
          app:titleEnabled="false"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"
            android:height="250dp"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_collapseMode="parallax"
            >

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:text="@string/lbl_current_weather"
              android:textColor="@color/colorWhite"
              android:textSize="12sp"
              />

          <TextView
              android:id="@+id/txt_city_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:textColor="@color/colorWhite"
              android:textSize="32sp"
              android:textStyle="bold"
              />

          <TextView
              android:id="@+id/txt_region_and_country_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="16dp"
              android:textColor="@color/colorWhite"
              android:textSize="16sp"
              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <ImageView
                android:id="@+id/condition_icon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="start"
                android:contentDescription="@string/app_name"
                android:src="@drawable/rainy"
                android:tint="@color/colorWhite"
                />

            <TextView
                android:id="@+id/txt_temperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:textColor="@color/colorWhite"
                android:textSize="44sp"
                />
          </LinearLayout>

          <TextView
              android:id="@+id/condition_label"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="end|center_vertical"
              android:textColor="@color/colorWhite"
              android:textSize="14sp"
              />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            style="@style/ToolBarStyle"
            />
      </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          app:cardBackgroundColor="@color/colorWhite"
          app:cardCornerRadius="4dp"
          app:cardElevation="4dp"
          app:contentPadding="16dp"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

          <com.rofhiwa.weatherapp.ui.custom.LabelTextView
              android:id="@+id/txt_wind_speed"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:label="@string/lbl_wind_speed"
              />

          <com.rofhiwa.weatherapp.ui.custom.LabelTextView
              android:id="@+id/txt_wind_degree"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:label="@string/lbl_wind_degree"
              />

          <com.rofhiwa.weatherapp.ui.custom.LabelTextView
              android:id="@+id/txt_wind_direction"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:label="@string/lbl_wind_direction"
              />

          <com.rofhiwa.weatherapp.ui.custom.LabelTextView
              android:id="@+id/txt_humidity"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:label="@string/lbl_humidity"
              />

          <com.rofhiwa.weatherapp.ui.custom.LabelTextView
              android:id="@+id/txt_clouds"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:label="@string/lbl_cloud"
              />

          <com.rofhiwa.weatherapp.ui.custom.LabelTextView
              android:id="@+id/txt_last_updated"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:label="@string/lbl_last_updated"
              />

        </LinearLayout>
      </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>